--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,6 @@
   <!--<main class="mdl-layout__content" style="padding: 20px;" *ngIf="stocks">
     <summary [stock]="stocks[0]"></summary>-->
     <main class="mdl-layout__content" style="padding: 20px;">
-      <app-dashboard></app-dashboard>
-    <app-dashboard></app-dashboard>
+      <app-manage></app-manage>
   </main>
 </div>
